# agent-examples

./: CONTRIBUTING.md  README.md  sample-environments.yaml
.github/workflows/: build.yaml  ci.yaml
a2a/a2a-contact-extractor/: pyproject.toml
a2a/a2a-currency-converter/: Dockerfile
a2a/a2a-currency-converter/app/: agent.py
a2a/a2a_contact_extractor/: .env  Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
a2a/a2a_currency_converter/: Dockerfile
a2a/a2a_currency_converter/app/: test_client.py
a2a/git_issue_agent/: .env.kagenti  .env.ollama  .env.openai  .env.template  Dockerfile  README.md  a2a_agent.py  pyproject.toml
a2a/git_issue_agent/git_issue_agent/: agents.py  auth.py  config.py  data_types.py  llm.py  main.py  prompts.py
a2a/langgraph/: Dockerfile  __init__.py  __main__.py  agent.py  pyproject.toml
a2a/langgraph/app/: __main__.py  test_client.py
a2a/marvin/: Dockerfile  __main__.py  task_manager.py
a2a/research/: .env.template  a2a_agent.py  pyproject.toml
a2a/research/granite_rag_agent/: agents.py  config.py  event.py  keycloak.py  llm.py  main.py  prompts.py
a2a/research/granite_rag_agent/tools/: tavily_search.py
a2a/slack_researcher/: .env.template  Dockerfile  README.md  a2a_agent.py  pyproject.toml
a2a/slack_researcher/slack_researcher/: agents.py  auth.py  config.py  data_types.py  event.py  llm.py  main.py  prompts.py  types.py
a2a/weather_service/: pyproject.toml
a2a/weather_service/src/weather_service/: __init__.py  agent.py  configuration.py  graph.py
acp/acp_ollama_researcher/: pyproject.toml
acp/acp_ollama_researcher/src/acp_ollama_researcher/: agent.py  graph.py
acp/acp_weather_service/: Dockerfile  pyproject.toml
acp/acp_weather_service/src/acp_weather_service/: __init__.py  agent.py  graph.py
acp/acp_weather_serviceX/: Dockerfile
acp/acp_weather_serviceX/src/acp_weather_service/: graph.py
acp/ollama-deep-researcher/src/ollama_deep_researcher/: agent.py  configuration.py
acp/ollama_weather_service/: README.md  pyproject.toml
acp/ollama_weather_service/src/ollama_weather_service/: agent.py  configuration.py  graph.py
docs/: dev-guide.md
mcp/github_tool/: .env.template  .gitignore  Dockerfile  README.md  go.mod  go.sum
mcp/github_tool/cli/main/: main.go
mcp/github_tool/gtlib/: server.go  upstream.go
mcp/slack_tool/: Dockerfile  README.md  auth.py  pyproject.toml  slack_tool.py
mcp/weather_tool/: Dockerfile  pyproject.toml  weather_tool.py
mcp/weather_toolX/: Dockerfile
