[project]
name = "a2a-samples-marvin"
version = "0.1.0"
description = "Currency conversion using A2A and Marvin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["marvin>=3.0.0", "a2a-samples"]

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google/A2A.git", subdirectory = "samples/python" }

[tool.ruff.lint]
extend-select = ["I", "UP"]
