[project]
name = "slack-researcher"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Slack research Agent module"
dependencies = [
    "ag2[openai,mcp]>=0.9.6",
    "tavily-python>=0.7.7",
    "python-dotenv>=1.1.0",
    "a2a-sdk>=0.2.16",
    "python-keycloak>=5.5.1",
    "authlib>=1.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "a2a_agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
